{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 128,
  "lineage": "75ada980-5837-d602-d63e-a2a3bc05d959",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "jp_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:481356006491:internet-gateway/igw-0b5388780e3dff825",
            "id": "igw-0b5388780e3dff825",
            "owner_id": "481356006491",
            "region": "us-east-1",
            "tags": {
              "Name": "jp-igw"
            },
            "tags_all": {
              "Name": "jp-igw"
            },
            "vpc_id": "vpc-06e165c09082462f4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.jp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "jp_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:481356006491:route-table/rtb-00fd8252d1fb4417c",
            "id": "rtb-00fd8252d1fb4417c",
            "owner_id": "481356006491",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b5388780e3dff825",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "jp-route-table"
            },
            "tags_all": {
              "Name": "jp-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-06e165c09082462f4"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.jp_igw",
            "aws_vpc.jp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "jp_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cb268a46f10b554e",
            "region": "us-east-1",
            "route_table_id": "rtb-00fd8252d1fb4417c",
            "subnet_id": "subnet-0e410987532f2163e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.jp_igw",
            "aws_route_table.jp_route_table",
            "aws_subnet.jp_subnet",
            "aws_vpc.jp_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0de1da7af842f9268",
            "region": "us-east-1",
            "route_table_id": "rtb-00fd8252d1fb4417c",
            "subnet_id": "subnet-007cfa03e78aa4cc9"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.jp_igw",
            "aws_route_table.jp_route_table",
            "aws_subnet.jp_subnet",
            "aws_vpc.jp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "jp_cluster_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:481356006491:security-group/sg-0a6d31add2b7da613",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a6d31add2b7da613",
            "ingress": [],
            "name": "terraform-20250801102055923300000001",
            "name_prefix": "terraform-",
            "owner_id": "481356006491",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "jp-cluster-sg"
            },
            "tags_all": {
              "Name": "jp-cluster-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-06e165c09082462f4"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.jp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "jp_node_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:481356006491:security-group/sg-054304c968e9c01c2",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-054304c968e9c01c2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "terraform-20250801102055935600000002",
            "name_prefix": "terraform-",
            "owner_id": "481356006491",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "jp-node-sg"
            },
            "tags_all": {
              "Name": "jp-node-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-06e165c09082462f4"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.jp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "jp_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:481356006491:subnet/subnet-0e410987532f2163e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e410987532f2163e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "481356006491",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "jp-subnet-0"
            },
            "tags_all": {
              "Name": "jp-subnet-0"
            },
            "vpc_id": "vpc-06e165c09082462f4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.jp_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:481356006491:subnet/subnet-007cfa03e78aa4cc9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-007cfa03e78aa4cc9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "481356006491",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "jp-subnet-1"
            },
            "tags_all": {
              "Name": "jp-subnet-1"
            },
            "vpc_id": "vpc-06e165c09082462f4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.jp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "jp_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:481356006491:vpc/vpc-06e165c09082462f4",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-00cfafd533dc7f65e",
            "default_route_table_id": "rtb-0c8872c20a8394cc5",
            "default_security_group_id": "sg-09075f38663ad2ffb",
            "dhcp_options_id": "dopt-0e945315fa6c8a238",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-06e165c09082462f4",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c8872c20a8394cc5",
            "owner_id": "481356006491",
            "region": "us-east-1",
            "tags": {
              "Name": "jp-vpc"
            },
            "tags_all": {
              "Name": "jp-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}